# johnson-house-recreation

./: .gitignore  README.md
ProyectoFinal/: CMakeLists.txt  MainPrueba.cpp
ProyectoFinal/ProyectoFinal/: Main_P5.cpp  ProyectoFinal.vcxproj  ProyectoFinal.vcxproj.filters
ProyectoFinal/ProyectoFinal/Debug/: ProyectoFinal.exe.recipe  ProyectoFinal.ilk
ProyectoFinal/ProyectoFinal/Debug/ProyectoFinal.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ProyectoFinal.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: 317005435_PRACTICA7_GPO6.cpp  CMakeLists.txt  MainPrueba.cpp  Mesh.h  Model.h  meshAnim.h  modelAnim.h
src/Models/Chair/: chair.mtl
src/Models/Dishware/: dishware.mtl
src/Models/Door/: door.mtl
src/Models/Dresser/: dresser.mtl
src/Models/Floppy/: floppy.mtl
src/Models/Fly/: fly.mtl
src/Models/Fridge/: fridge.mtl
src/Models/House/: house10.mtl  house11.mtl  house12.mtl  house14.mtl  house17.mtl  house2.mtl  house3.mtl  house4.mtl  house55.mtl  house6.mtl  house7.mtl  house8.mtl
src/Models/Light/: light.mtl
src/Models/Pot/: pot.mtl
src/Models/SmallCouch/: smallcouch.mb
src/Models/Spider/: spider.mtl
src/Models/Table/: table.mb  table.mtl
src/Shaders/: anim.vs  anim2.frag  anim2.vs  lamp2.frag  lamp2.vs
